Fixed some layout issues + 2 new themes

--- a/app/assets/css/app/header.less
+++ b/app/assets/css/app/header.less
@@ -60,17 +60,33 @@ header {
       li {
         display: inline-block;
         float: left;
+
         a {
           font-size: 12px;
           color: #777;
           line-height: 24px;
           display: inline-block;
+          position: relative;
         }
+
+        &:not(:last-child) a {
+          padding: 0 10px;
+        }
+
+        &:last-child a {
+          padding: 0 0 0 10px;
+        }
+
         &:not(:last-child) a:after {
           content: "";
-          border-left: 1px solid #999;
-          border-right: 1px solid #eee;
-          margin: 0 10px;
+          border-left: 1px solid #bbb;
+          border-right:1px solid #e5e5e5;
+          display: block;
+          position: absolute;
+          right: -2px;
+          top: 4px;
+          width: 0;
+          height: 16px;
         }
       }
     }
